--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.2",
+    "clsx": "^2.1.1",
     "emailjs": "^4.0.3",
     "lucide-react": "^0.487.0",
+    "motion": "^12.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.2"
   },
   "devDependencies": {
